[package]
name = "input"
version = "0.1.0"
authors = ["Eric Sheppard <eric@sheppard.cloud>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1.13", features = ["serde"] }
itertools = "0.10"

[dependencies.resolution]
git = "https://github.com/esheppa/resolution"
rev = "3c2fa9e"
